<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/btnBlockNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="118dp"
            android:background="@drawable/block_selector"
            android:paddingBottom="22dp"
            android:paddingTop="22dp"
            android:text="@string/block_begin"
            android:textColor="@drawable/text_selector"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/app_name"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/txtDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnBlockNumber"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/app_desc"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/ckbxSendSms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDesc"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="51dp"
            android:layout_marginRight="51dp"
            android:layout_marginTop="42dp"
            android:gravity="center"
            android:text="@string/check_sendsms" />

        <EditText
            android:id="@+id/edtSendSms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ckbxSendSms"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:hint="@string/hint_sendsms" />

    </RelativeLayout>
</ScrollView>