<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/lnltEnterNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:weightSum="1">

        <Button
            android:id="@+id/btnEnterNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/save_selector"
            android:text="@string/block_number"
            android:textColor="@drawable/text_selector"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnEnterContact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:text="@string/block_contact"
            android:visibility="gone" />

    </LinearLayout>

    <EditText
        android:id="@+id/edtEnterNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lnltEnterNumber"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_number"
        android:inputType="number"
        android:maxLength="11" />

    <ListView
        android:id="@+id/lstvBlockList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtEnterNumber"
        android:layout_marginTop="30dp" />
</RelativeLayout>